Cleanup worldgen.ore code